2023-09-01  Karl Berry  <karl@freefriends.org>

	* ptexmac.h (cmp_return): a few words of documentation about
	the seemingly strange lack of handling the a==b case.
	Suggested by Jim Diamond.

2023-08-28  Karl Berry  <karl@freefriends.org>

	* tounicode.c (undump_to_unicode): check that gu->name
	(and gu->unicode_seq) did not undumped as NULL.
	Report from Gregory DUCK,
	https://tug.org/pipermail/tex-live/2023-August/049406.html.

2023-08-27  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* tests/{cnfline,partoken}.test:
	Make easier to test on Windows.

2023-08-26  Karl Berry  <karl@freefriends.org>

	* writet1.c (t1_builtin_enc): guard somewhat against corrupt pfbs,
	in the dup and dup dup checking. Report from Gregory DUCK,
	https://tug.org/pipermail/tex-live/2023-August/049400.html.

2023-08-20  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* {expanded,pdfimage,pdftex,pdftosrc,ttf2afm,wcfname,
	wprob}.test:
	Make easier to test on Windows.

2023-08-18  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* pdftex.web: minor cleanup (sync with etex.ch r24155)

2023-03-29  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* wcfname.test:
	Sync with update of fn-generate.perl.

2023-03-09  Karl Berry  <karl@tug.org>

	* TL'23 release.

2023-02-21  Phelype Oleinik  <phelype.oleinik@latex-project.org>

	* pdftex.web: reduce memory usage for \special shipout,
	a la HH/luatex.

2023-02-14  Thanh Han The  <hanthethanh@gmail.com>

	* writet1.c (cs_mark) <CS_SEAC>: look for the composite(d) glyphs too,
	to include in /CharSet. Original report from John Lienhard
	for Lucida: https://tug.org/pipermail/lucida/2023-February/000922.html
	Also happens with DejaVuSerif: tests/31-CharSet-miss-composite-char.
	(pdftex r902)

2023-02-14  Thanh Han The  <hanthethanh@gmail.com>

	* tounicode.c (set_glyph_unicode): take new glyph_unicode_entry arg.
	(is_last_byte_valid): new fn.
	(write_tounicode): stop writing range when last byte of a
	beginbfrange is no longer valid, that is, >255.
	Report from Ben JW: